Alignment is not correct "Signed By Esignature Server Signed On

--- a/assets/css/rtl-basic-mobile.css
+++ b/assets/css/rtl-basic-mobile.css
@@ -850,11 +850,9 @@ table.display td.time {
     }
   }
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px){
-  .signature-wrapper-displayonly-signed .signed {
+.signature-wrapper-displayonly-signed .signed {
       background-position: right bottom !important;
-  }  
-}
+}  
 
 .document-sign-page #audit-trail-wrapper .main .info .sign {
     border: none;
